# mbzirc_gazebo

./: CMakeLists.txt  README.md  package.xml  setup.sh
ardupilotStuff/: readme.md  vehicleinfo.py
ardupilotStuff/MBZIRC-provaParams/: gazebo-MBZIRColo.parm
gazebo_models/MBZIRColo_base/: model.config  model.sdf
gazebo_models/MBZIRColo_base/meshes/: elica.stl  motore.stl  telaio.stl
gazebo_models/MBZIRColo_demo/: model.config  model.sdf
gazebo_models/MBZIRColo_gimbal_camera/: model.config  model.sdf
gazebo_plugins/: CMakeLists.txt  baloon_controller.cc  readme.md
gazebo_plugins/prova_modelplugin/: primaprova.cc  provaRos.cc
gazebo_worlds/: complex_2.world  complex_field.world  drone_plus_env.world  full.world  only_fixed_actor.world  provaplugin.world  ros_actor.world
launch/: full_world_w_vision.launch  full_world_wo_vision.launch  prova_plugin_launch.launch  tgt_plugin.launch
